--- a/package.json
+++ b/package.json
@@ -1,27 +1,25 @@
 {
   "name": "hashkings-api",
-  "version": "0.9.5",
-  "description": "STEEM Cannabis Farming Interface API",
+  "version": "0.0.1",
+  "description": "Hive Cannabis Farming Interface API",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node index.js"
   },
   "keywords": [
-    "dlux",
-    "steem",
+    "hive",
     "hashkings"
   ],
   "author": "qwoyn",
   "license": "MIT",
   "dependencies": {
-    "core-js": "^3.6.4",
-    "cors": "2.8.5",
+    "cors": "^2.8.5",
     "dsteem": "^0.11.2",
     "express": "^4.16.4",
     "ipfs-http-client": "^42.0.0-pre.2",
-    "steem": "0.7.7",
-    "steem-state": "1.3.7",
+    "steem-js-patched": "^1.0.0",
+    "steem-state": "1.3.2",
     "steem-transact": "^1.0.2"
   }
 }
