--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "hashkings-api",
+  "name": "etherchest-api",
   "version": "0.0.1",
   "description": "Hive Cannabis Farming Interface API",
   "main": "index.js",
