--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "etherchest-api",
-  "version": "0.0.1",
+  "version": "0.2.3",
   "description": "Hive Cannabis Farming Interface API",
   "main": "index.js",
   "scripts": {
@@ -9,9 +9,9 @@
   },
   "keywords": [
     "hive",
-    "hashkings"
+    "etherchest"
   ],
-  "author": "qwoyn",
+  "author": "Daniel Pittman",
   "license": "MIT",
   "dependencies": {
     "cors": "^2.8.5",
