--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "etherchest-api",
   "version": "0.2.3",
-  "description": "Hive Cannabis Farming Interface API",
+  "description": "EtherChest Ecosystem API",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
@@ -14,6 +14,8 @@
   "author": "Daniel Pittman",
   "license": "MIT",
   "dependencies": {
+    "@hivechain/hivejs": "^1.0.4",
+    "@hiveio/hive-js": "^0.8.4",
     "cors": "^2.8.5",
     "dsteem": "^0.11.2",
     "express": "^4.16.4",
