--- a/package.json
+++ b/package.json
@@ -14,13 +14,11 @@
   "author": "Daniel Pittman",
   "license": "MIT",
   "dependencies": {
-    "@hivechain/hivejs": "^1.0.4",
-    "@hiveio/hive-js": "^0.8.4",
+    "hive-js": "^0.8.4",
     "cors": "^2.8.5",
     "dsteem": "^0.11.2",
     "express": "^4.16.4",
     "ipfs-http-client": "^42.0.0-pre.2",
-    "steem-js-patched": "^1.0.0",
     "steem-state": "1.3.2",
     "steem-transact": "^1.0.2"
   }
