--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "author": "Daniel Pittman",
   "license": "MIT",
   "dependencies": {
+    "@hiveio/dhive": "^0.14.1",
     "@hiveio/hive-js": "^0.8.4",
     "cors": "^2.8.5",
     "dsteem": "^0.11.2",
