--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "etherchest-api",
-  "version": "0.3.6",
-  "description": "EtheChest Ecosystem API",
+  "version": "0.5.7",
+  "description": "Etherchest Ecosystem API",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
@@ -9,16 +9,17 @@
   },
   "keywords": [
     "hive",
-    "hashkings"
+    "etherchest"
   ],
-  "author": "qwoyn",
+  "author": "Daniel Pittman",
   "license": "MIT",
   "dependencies": {
     "cors": "^2.8.5",
     "dsteem": "^0.11.2",
     "express": "^4.16.4",
     "ipfs-http-client": "^42.0.0-pre.2",
-    "@hiveio/hive-js": "^0.8.4",
+    "steem-js-patched": "^1.0.0",
+    "steem-state": "1.3.2",
     "steem-transact": "^1.0.2"
   }
 }
