--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "etherchest-api",
-  "version": "0.5.7",
-  "description": "Etherchest Ecosystem API",
+  "version": "0.6.7",
+  "description": "EtherChest API",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
