--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "author": "Daniel Pittman",
   "license": "MIT",
   "dependencies": {
+    "axios": "^0.20.0",
     "cors": "^2.8.5",
     "dsteem": "^0.11.2",
     "express": "^4.16.4",
