--- a/package.json
+++ b/package.json
@@ -14,9 +14,9 @@
   "author": "Daniel Pittman",
   "license": "MIT",
   "dependencies": {
+    "@hiveio/dhive": "^0.14.1",
     "axios": "^0.20.0",
     "cors": "^2.8.5",
-    "dsteem": "^0.11.2",
     "express": "^4.16.4",
     "ipfs-http-client": "^42.0.0-pre.2",
     "steem-js-patched": "^1.0.0",
