--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
   "author": "Daniel Pittman",
   "license": "MIT",
   "dependencies": {
-    "@hiveio/dhive": "^0.14.1",
+    "@esteemapp/dhive": "^0.14.15",
     "axios": "^0.20.0",
     "cors": "^2.8.5",
     "express": "^4.16.4",
