--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "axios": "^0.20.0",
     "cors": "^2.8.5",
     "express": "^4.16.4",
+    "ipfs": "^0.50.2",
     "ipfs-http-client": "^42.0.0-pre.2",
     "steem-js-patched": "^1.0.0",
     "steem-state": "1.3.2",
