--- a/package.json
+++ b/package.json
@@ -23,7 +23,6 @@
     "ipfs-http-client": "^42.0.0-pre.2",
     "steem-js-patched": "^1.0.0",
     "steem-state": "1.3.2",
-    "steem-transact": "^1.0.2",
-    "node-forge": ">=0.10.0"
+    "steem-transact": "^1.0.2"
   }
 }
